[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
protocol = { path = "../protocol" }
aptos-crypto = { git ="https://github.com/sourav1547/aptos-core.git",  package ="aptos-crypto", features=["cloneable-private-keys", "fuzzing"]}
network = { path = "../network" }
tokio = { version = "1.20.0", features = ["full"] }
bincode = "1.3.3"
clap = { version = "3.2.12", features = ["derive"]}
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.83"
anyhow = "1.0.58"
rayon = "1.5.3"
log = "0.4.17"
rand = "0.7.3"
rand_core = "0.5.1"
rand_chacha = "0.3"
simple_logger = { version = "2.2.0", default-features = false, features = ["colors"] }
blstrs = { version = "0.6.1", features = ["serde"] }
acss = { path = "../acss" }
group = "0.12.1"


[dev-dependencies]
criterion = "0.3.4"
ff = "0.12.0"
group = "0.12.0"
pairing = "0.22.0"

