[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network" }
serde = { version = "1.0.139", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
anyhow = "1.0.58"
rayon = "1.5.3"
aptos-crypto = { git ="https://github.com/sourav1547/aptos-core.git",  package ="aptos-crypto", features=["cloneable-private-keys", "fuzzing"]}
